--- a/app/src/main/res/layout/item_anime.xml
+++ b/app/src/main/res/layout/item_anime.xml
@@ -1,6 +1,4 @@
-<!-- item_anime.xml -->
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,11 +6,11 @@
     android:orientation="vertical"
     android:padding="8dp">
 
-    <!-- Добавьте здесь компоненты для отображения информации об аниме -->
     <TextView
         android:id="@+id/textNameAnime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/_10dp"
         android:text="@string/textAnimeName"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -24,33 +22,69 @@
         android:id="@+id/textType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/_10dp"
         android:text="@string/textType"
         android:textSize="16sp"
         android:textStyle="italic"
-        android:layout_marginEnd="@dimen/_10dp"
         app:layout_constraintEnd_toStartOf="@+id/buttonWatchList"
         app:layout_constraintTop_toBottomOf="@+id/textNameAnime"
         tools:ignore="MissingConstraints" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/temp_wish"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="temp_wish"-->
+<!--        android:textSize="16sp"-->
+<!--        android:layout_marginEnd="@dimen/_10dp"-->
+<!--        android:textStyle="italic"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/textType"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textNameAnime"-->
+<!--        tools:ignore="MissingConstraints" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/temp_watch"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="temp_watch"-->
+<!--        android:textSize="16sp"-->
+<!--        android:layout_marginEnd="@dimen/_10dp"-->
+<!--        android:textStyle="italic"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/temp_wish"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textNameAnime"-->
+<!--        tools:ignore="MissingConstraints" />-->
 
     <ImageView
         android:id="@+id/buttonWatchList"
         android:layout_width="@dimen/_30dp"
         android:layout_height="@dimen/_30dp"
         android:layout_marginEnd="@dimen/_10dp"
+        android:importantForAccessibility="no"
         android:src="@drawable/ic_view"
         app:layout_constraintEnd_toStartOf="@+id/buttonWishList"
         app:layout_constraintTop_toBottomOf="@+id/textNameAnime"
-        tools:ignore="MissingConstraints"
-        android:importantForAccessibility="no" />
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/buttonWishList"
         android:layout_width="@dimen/_30dp"
         android:layout_height="@dimen/_30dp"
+        android:layout_marginEnd="@dimen/_10dp"
+        android:importantForAccessibility="no"
         android:src="@drawable/ic_wish"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textNameAnime"
-        tools:ignore="MissingConstraints"
-        android:importantForAccessibility="no" />
+        tools:ignore="MissingConstraints" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="1dp"
+        android:background="?android:attr/dividerVertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonWatchList"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
